# MLIR-toy

./: .gitignore  CMakeLists.txt
cmake/modules/: AddToy.cmake
example/: codegen.mlir  codegen_opt.mlir  trivial_reshape.mlir  trivial_reshape.toy  trivial_reshape_opt.mlir
include/toy/: AST.h  CastOpInterface.h  CastOpInterface.h.inc  CastOpInterface.td  Dialect.h  Dialect.h.inc  Dialect.td  Lexer.h  MLIRGen.h  Ops.h.inc  Ops.td  Parser.h  Passes.h  ShapeInferenceInterface.h  ShapeInferenceInterface.td  ToyCombine.td
lib/: AST.cpp  CMakeLists.txt  CastOpInterface.cpp.inc  Dialect.cpp  Dialect.cpp.inc  MLIRGen.cpp  Ops.cpp.inc  Parser.cpp  ShapeInferencePass.cpp  ToyCombine.cpp  ToyCombine.inc
tools/: CMakeLists.txt  Toy.cpp
